# ot_tracker

./: .gitignore  Cargo.toml  README.md  data.db
migrations/: 20250605223236_create_users_table.sql  20250609005735_rename_id_to_user_id.sql  20250609010233_create_overtime_table.sql
src/: main.rs  utils.rs
src/handlers/: mod.rs  overtime_handler.rs  user_handler.rs
src/models/: mod.rs  overtime.rs  user.rs
src/prompts/: mod.rs  overtime_prompts.rs  user_prompts.rs
src/ui/: input.rs  menu.rs
